# vla-setup

fr3/: data_recorder.py  prepare.sh  vla_orchestrator.py
franka-isaac/: control_test.py  franka_teleop.py  publish_joint_command.sh  subscribe_image.py  subscribe_real_image.py  vla_test.py
openpi/: pi0_client.py  pi0_droid_inference.ipynb  pi0_fast_inference.ipynb  pi0_fast_inference.py  pi0_server.py  pi0_server2.py  pi0_server3.py
ros2_ws/src/franka_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/franka_teleop/franka_teleop/: teleop_franka.py
scenario1/: controller_pybullet_socket.py  dummy_vla_socket.py
utils/: webcam_all_viewer.py  webcam_viewer.py
